--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Cudjo-s-own-story-of-the-last-African-slaver_73715
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73715-h/images/cover.jpg
 creator:
   author:
     agent_name: Hurston, Zora Neale
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/6368
     wikipedia: https://en.wikipedia.org/wiki/Zora_Neale_Hurston
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73715#Cudjo-s-own-story-of-the-last-African-slaver
 gutenberg_issued: '2024-05-28'
 gutenberg_type: Text
 identifiers:
